tests/miniJava/neg/005290_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public while java ( ) { return 0 ; } }
